facts/manifests/base/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: facts-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: true
    traefik.ingress.kubernetes.io/router.tls.certresolver: linodeACME
spec:
  rules:
    - host: seannguyen.dev
      http:
        paths:
          - path: /random
            pathType: Prefix
            backend:
              service:
                name:  facts-api
                port:
                  number: 3080
